# sahara

./: .env.example  .gitignore  .saharaignore.template  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_READINESS_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  STATUS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  native-artifacts.yml  publish.yml
apps/ios/: README.md
apps/ios/SaharaMobileCore/: Package.swift  README.md
apps/ios/SaharaMobileCore/Sources/SaharaMobileCore/: CaptureOutbox.swift  DeviceConfigurationStore.swift  KeychainDeviceConfigurationStore.swift  SaharaMobileAPIClient.swift  SaharaPairing.swift
apps/ios/SaharaMobileCore/Tests/SaharaMobileCoreTests/: CaptureOutboxTests.swift  PairingImportTests.swift  SaharaMobileAPIClientTests.swift
docs/: ANSWER_PROVIDERS.md  CLAUDE_DESKTOP.md  COMMAND_REFERENCE.md  GETTING_STARTED.md  INSTALLATION.md  ios-shortcuts.md  macos-apple-silicon-bundle.md  mobile-capture-api.md  windows-x64-installer.md
docs/demo/: README.md  sahara-demo.tape
docs/demo/fixtures/Home/Repairs/: dishwasher_invoice.md
docs/demo/fixtures/Medical/: prescription_receipt.md
docs/demo/fixtures/Travel/: portugal_itinerary.md
docs/integrations/: chat-agents.md
packaging/pyinstaller/: sahara_entry.py  sahara_macos_arm64.spec  sahara_windows_x64.spec
scripts/: __init__.py  build_macos_bundle.py  build_macos_installer.py  build_windows_bundle.py  build_windows_installer.py  package_native_artifacts.py  smoke_macos_bundle.py  smoke_windows_bundle.py  verify_release_artifacts.py
specs/: CAPTURED_KNOWLEDGE_PLAN.md  COMPANION_APP_SPIKE.md  SAHARA_IMPLEMENTATION_PLAN.md  SIMPLE_INSTALLER_PLAN.md  SPEC_local_storage_minio.md  SPEC_v1.md  SPEC_v2.md  SPEC_v3.md  SPEC_v4.md  SPEC_v5.md  SPEC_v6.md  THREE_STEP_PRODUCT_MODEL_PLAN.md
src/sahara/: __init__.py  claude_desktop.py  cli.py  config.py  cost_estimator.py  daemon.py  encryption.py  file_watcher.py  ignore_rules.py  index_watcher.py  library.py  mcp_server.py  mobile_api.py  mobile_setup.py  models.py  native_onboarding.py  notifier.py  s3_client.py  search_engine.py  shortcuts.py  state_db.py  sync_engine.py
src/sahara/data/shortcuts/: __init__.py  recall-from-sahara.json  remember-in-sahara.json
src/sahara/memory/: __init__.py  format.py  service.py
src/sahara/search/: __init__.py  ask_engine.py  search_engine.py
src/sahara/storage/: __init__.py  backend.py  cost_estimator.py  dual_write_backend.py  lifecycle.py  local_drive_client.py  s3_client.py  state_db.py
src/sahara/sync/: __init__.py  daemon.py  file_watcher.py  ignore_rules.py  sync_engine.py
src/sahara/utils/: __init__.py  encryption.py  hash.py  notifier.py
tests/: conftest.py  test_ask_openai.py  test_claude_desktop.py  test_cli.py  test_cli_extended.py  test_config.py  test_cost_estimator.py  test_daemon.py  test_daemon_extended.py  test_encryption.py  test_encryption_extended.py  test_epub_extraction.py  test_file_watcher.py  test_final_coverage.py  test_ignore_rules.py  test_index_watcher.py  test_installation_docs.py  test_local_backends.py  test_manifest.py  test_mcp_server.py  test_memory.py  test_memory_format_edges.py  test_mobile_api.py  test_mobile_setup.py  test_models.py  test_native_artifact_workflow.py  test_native_bundle.py  test_notifier.py  test_phase0.py  test_phase0_coverage.py  test_phase0_final.py  test_phase0_init.py  test_release_artifacts.py  test_s3_client.py  test_s3_client_extended.py  test_saharaignore_template.py  test_search_engine_alias.py  test_shortcuts.py  test_state_db.py  test_sync_engine.py  (+4 more)
