[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sahara"
version = "0.2.0"
description = "Local-first intelligent storage with semantic search"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sahara Authors" }]
keywords = ["storage", "sync", "semantic-search", "local-first", "privacy", "s3", "backup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
]
dependencies = [
    "boto3>=1.34.0",
    "click>=8.1.0",
    "watchdog>=4.0.0",
    "cryptography>=42.0.0",
    "keyring>=25.0.0",
    "plyer>=2.1.0",
    "filelock>=3.14.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
search = [
    "fastembed>=0.3.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "sqlite-vec>=0.1.6",
]
ocr = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "moto[s3]>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
all = ["sahara[search,ocr,mcp]"]

[project.scripts]
sahara = "sahara.cli:main"

[project.urls]
Homepage = "https://github.com/nidheesh-p/sahara"
Repository = "https://github.com/nidheesh-p/sahara"
Issues = "https://github.com/nidheesh-p/sahara/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sahara"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/README.md",
    "/pyproject.toml",
    "/.saharaignore.template",
]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["sahara.sync.daemon", "sahara.sync.file_watcher"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"
